<!--
  ~ Copyright 2017 75py
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">OverlayViewManager Sample</string>
    <string name="api_level">API Level %d</string>
    <string name="request_overlay_permisson">Allow "display over other apps"</string>
    <string name="overlay_permission_is_allowed">"display over other apps" is Allowed</string>
    <string name="showhide">Show / Hide</string>
    <string name="startstop">Start / Stop</string>
    <string name="retry_dispose">Retry dispose() of the retained overlay</string>
    <string name="title_sample_all_options">SAMPLE(All options)</string>
    <string name="title_sample1_clickable_draggable">SAMPLE1(Clickable, Draggable)</string>
    <string name="title_sample2_depends_on_service">SAMPLE2(depends on Service)</string>
    <string name="title_sample3_timber_depends_on_activity">SAMPLE3(Timber, depends on Activity)</string>
    <string name="title_sample4_override_brightness">SAMPLE4(Override screen brightness)</string>
</resources>
